# lizardteste

./: .gitignore  CMakeLists.txt  Guide_MenuConfig_NovaReptileElevage.md  Kconfig.projbuild  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/: README.md  lv_conf.h
components/ch422g/: CMakeLists.txt  ch422g.c
components/ch422g/include/: ch422g.h
components/i2c_bus/: CMakeLists.txt  i2c_bus.c
components/i2c_bus/include/: i2c_bus.h
components/lvgl/: CMakeLists.txt  README.md  lv_conf.h  lvgl.h
components/lvgl_config/: CMakeLists.txt  README.md  lv_conf.h  lvgl.h
components/st7262_rgb/: CMakeLists.txt  Kconfig  st7262_rgb.c  st7262_rgb.h
components/st7701_rgb/: CMakeLists.txt  Kconfig  st7701_rgb.c  st7701_rgb.h
main/: CMakeLists.txt  main.c
main/drivers/: ch422.c  ch422.h  display_driver.c  display_driver.h  touch_driver.c  touch_driver.h
main/ui/: ui_content.c  ui_content.h  ui_data.c  ui_data.h  ui_footer.c  ui_footer.h  ui_header.c  ui_header.h  ui_icons.c  ui_icons.h  ui_main.c  ui_main.h  ui_sidebar.c  ui_sidebar.h  ui_styles.c  ui_styles.h
scripts/: build_flash.sh
tests/host_fault_injection/: CMakeLists.txt  test_display_driver_fault.c  test_ui_main_fault.c
tests/host_fault_injection/stubs/: ch422g.h  esp_err.h  esp_heap_caps.h  esp_lcd_panel_ops.h  esp_log.h  esp_timer.h  lvgl.h  mock_dependencies.c  mock_support.h  st7701_rgb.h
