idf_component_register(
    SRCS 
        "main.c"
        "ui/ui_main.c"
        "ui/ui_header.c"
        "ui/ui_sidebar.c"
        "ui/ui_content.c"
        "ui/ui_footer.c"
        "ui/ui_styles.c"
        "ui/ui_icons.c"
        "ui/ui_data.c"
        "drivers/display_driver.c"
        "drivers/touch_driver.c"
    INCLUDE_DIRS 
        "."
        "ui"
        "drivers"
    REQUIRES
        lvgl
        st7262_rgb
    PRIV_REQUIRES
        nvs_flash
        esp_timer
        esp_psram
        driver
        ch422g
)
